# website_backend2

./: .env  Cargo.toml  Containerfile  Dockerfile  Makefile  OWNERS  catalog-info.yaml  clippy.toml  compose.yaml  deny.toml  docker-compose.yml  mkdocs.yml  test.sql
.github/workflows/: ci.yml
.tekton/: push.yaml
docs/: index.md
migrations/: 00-posts_pivot_primary_key.sql  01-canteen_pivot_remove_nullable.sql  03-canteen_data_add_time.sql  04-canteen_data_date_type.sql  05-canteen_menus_remove_nullable.sql  05-events_data_date_type.sql  06-events_color_black.sql  06-pages-fix-types.sql  06-posts_pivot_remove_nullable.sql  07-events_data_date_type.sql  07-pages-fix-types.sql  10-posts_data_fix_types.sql  12-menu_items_fix_types.sql  13-posts_fix_null_date.sql  canteen_data_add_time.sql  canteen_data_date_type.sql  canteen_pivot_primary_key.sql  password_resets_primary_key.sql
src/: database.rs  http.rs  main.rs  service.rs
src/entity/: canteen_data.rs  canteen_menus.rs  canteen_pivot_menus_data.rs  colleagues_data.rs  events_data.rs  menu_items.rs  migrations.rs  mod.rs  model_has_permissions.rs  model_has_roles.rs  newsletter.rs  pages.rs  password_resets.rs  permissions.rs  posts_authors.rs  posts_data.rs  posts_labels.rs  posts_pivot_labels_data.rs  prelude.rs  role_has_permissions.rs  roles.rs  users.rs
src/graphql/: cache.rs  canteen.rs  colleagues.rs  events.rs  mod.rs  pages.rs  transaction.rs  utils.rs
src/graphql/resolvers/: archive.rs  author.rs  canteen.rs  colleagues.rs  events.rs  labels.rs  menu.rs  mod.rs  pages.rs  posts.rs
src/graphql/types/: date.rs  datetime.rs  mod.rs  post_cursor.rs
src/http/: handlers.rs
src/utils/: err.rs  maybe.rs  mod.rs  paginate.rs  select_columns.rs  signal.rs  thread.rs
