[package]
name = "website_backend2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "signal", "fs"] }
async-graphql = { version = "5.0.7", features = ["chrono", "apollo_persisted_queries"] }
async-graphql-parser = "5.0.7"
async-graphql-axum = "5.0.7"
chrono = { version = "0.4.24", default-features=false }
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-actix-rustls", "macros", "with-chrono", "with-json" ], default-features = false }
sea-query = { version = "0.28.4", default-features = false, features = ["derive", "backend-mysql"] }
redis = { version = "0.23.0", features = ["aio", "tokio-comp", "connection-manager"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features= ["env-filter"] }
dotenv = "0.15.0"
thiserror = "1.0.40"
prometheus = "0.13.3"
bincode = "1.3.3"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
axum = { version = "0.6.20", features = ["http2", "tokio"], default-features = false }
smallvec = "1.13.2"
tower-http = { version = "0.4.4", features = ["cors", "compression-full", "decompression-full", "util", "catch-panic", "normalize-path"] }
tower = "0.4.13"
