[package]
name = "website_backend2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "signal", "fs"] }
async-graphql = { version = "7.0.5", features = ["chrono", "apollo_persisted_queries"] }
async-graphql-parser = "7.0.6"
async-graphql-axum = "7.0.5"
chrono = { version = "0.4.24", default-features=false }
sea-orm = { version = "0.12.5", features = ["sqlx-mysql", "runtime-actix-rustls", "macros", "with-chrono", "with-json" ], default-features = false }
sea-query = { version = "0.30.7", default-features = false, features = ["derive", "backend-mysql"] }
redis = { version = "0.25.3", features = ["aio", "tokio-comp", "connection-manager"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features= ["env-filter"] }
thiserror = "1.0.40"
prometheus = "0.13.4"
bincode = "1.3.3"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
axum = { version = "0.7.5", features = ["http2", "tokio"], default-features = false }
smallvec = "1.13.2"
tower-http = { version = "0.5.2", features = ["cors", "compression-full", "decompression-full", "util", "catch-panic", "normalize-path"] }
tower = "0.4.13"
