[package]
name = "website_backend2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "fs"] }
async-graphql = { version = "7.0.17", features = ["chrono", "apollo_persisted_queries"] }
async-graphql-parser = "7.0.17"
async-graphql-axum = "7.0.17"
chrono = { version = "0.4.42", default-features=false }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-actix-rustls", "macros", "with-chrono", "with-json" ], default-features = false }
redis = { version = "0.32.7", features = ["aio", "tokio-comp", "connection-manager"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "2.0.17"
prometheus = "0.14.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
axum = { version = "0.8.7", features = ["http2", "tokio"], default-features = false }
smallvec = "1.15.1"
tower-http = { version = "0.6.6", features = ["cors", "compression-full", "decompression-full", "util", "catch-panic", "normalize-path"] }
tower = "0.5.2"
